* Style issue that was creating a 15px gap at the bottom of the main page * closes #2169

--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -125,7 +125,7 @@ div#middle .background{
 
 div#middle .layoutleft{
     background: none;
-	padding-bottom:15px;
+	padding-bottom:0;
 }
 
 div#middle .layoutright{
